deployment/chainnova/mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: chainnova
spec:
#  type: NodePort
  ports:
  - name: "mariadb"
    port: 3306
    targetPort: 3306
#    nodePort: 31011
  selector:
    common.service: wordpress-db
