deployment/chainnova/wordpress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-app
  namespace: chainnova
spec:
  type: NodePort
  ports:
  - name: "wordpress-app"
    port: 3306
    targetPort: 3306
    nodePort: 31011
  selector:
    common.service: wordpress-app
